# suiCune

./: CMakeLists.txt  Makefile  README.md  constants.h  functions.c
audio/: engine.h
constants/: move_constants.h
data/events/: special_pointers.c
engine/battle/: core.c
engine/battle_anims/: anim_commands.c  anim_commands.h
engine/events/battle_tower/: battle_tower.c  trainer_text.c
engine/link/: lan.c  link.c  link_2.c  link_trade.c  mystery_gift.c  place_waiting_text.c
engine/menus/: debug_field_menu.c  debugmenu.c  intro_menu.c
engine/pokemon/: stats_screen.c
home/: mobile.c  serial.c  text.c  time.c
lib/mobile/: main.c
maps/: BattleTower1F.c  BattleTower1F.h  Pokecenter2F.c  PokecomCenter.c
mobile/: mobile_12.c  mobile_22.c  mobile_22_2.c  mobile_40.c  mobile_41.c  mobile_45_stadium.c  mobile_46.c  mobile_5b.c  mobile_5c.c  mobile_5f.c  mobile_menu.c
util/: assets.c  bugfix.h  features.h  network.c  record.c  serialize.c  socket.c  socket.h  util_string.c
