cmake_minimum_required(VERSION 3.31)

if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_CURRENT_BINARY_DIR)
  message(FATAL_ERROR "Please create a build directory. Building inside the suiCune directory directly would override the existing Makefile.")
endif()

project(suiCune)

set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED True)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror -Wno-unused-label")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_C_FLAGS} -O2")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_C_FLAGS} -Og -g -DDEBUG=1")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR})

option(BUGFIX "Enables bugfixes for suiCune (see util/bugfix.h)" OFF)
if(BUGFIX)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DBUGFIX=1")
endif(BUGFIX)

option(FASTBG "Removes extra frame delays on render, increasing the framerate" OFF)
if(FASTBG)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENHANCEMENT_DRAW_BG_IN_ONE_FRAME=1")
endif(FASTBG)

option(USE_PCG "Uses the PCG rng instead of the default Crystal one" OFF)
if(USE_PCG)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DENHANCEMENT_USE_PCG=1")
endif(USE_PCG)

set(FEATURE_MOBILE_DEFAULT ON)
option(FEATURE_NETWORKING "Enable networking features" ON)
if(NOT FEATURE_NETWORKING)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFEATURE_NETWORKING=0")
  set(FEATURE_MOBILE_DEFAULT OFF)
endif(FEATURE_NETWORKING)

option(FEATURE_MOBILE "Enable mobile adapter features" ${FEATURE_MOBILE_DEFAULT})
if(NOT FEATURE_MOBILE)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DFEATURE_MOBILE=0")
endif(FEATURE_MOBILE)

set(USE_PHYSFS_DEFAULT OFF)
if(WIN32)
    set(USE_PHYSFS_DEFAULT ON)
endif()
option(USE_PHYSFS "Use Physfs library for file system access" ${USE_PHYSFS_DEFAULT})
if(USE_PHYSFS)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUSE_PHYSFS=1")
endif(USE_PHYSFS)

set(USE_SDLNET_DEFAULT OFF)
if(FEATURE_NETWORKING AND WIN32)
    set(USE_SDLNET_DEFAULT ON)
endif()
option(USE_SDLNET "Use SDL_Net for online support" ${USE_SDLNET_DEFAULT})
if(USE_SDLNET)
  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DUSE_SDLNET=1")
endif(USE_SDLNET)

set(STATIC_DEFAULT OFF)
if(WIN32)
    set(STATIC_DEFAULT ON)
endif()
option(STATIC "Build a static binary" ${STATIC_DEFAULT})
if(STATIC)
  set(CMAKE_C_FLAGS "-static ${CMAKE_C_FLAGS}")
endif(STATIC)

add_executable(${PROJECT_NAME}
  tools/emu/peanut_sdl.c
  tools/emu/minigb_apu/minigb_apu.c
  home/array.c
  home/audio.c
  home/battle.c
  home/battle_vars.c
  home/call_regs.c
  home/clear_sprites.c
  home/compare.c
  home/copy.c
  home/copy_name.c
  home/copy_tilemap.c
  home/decompress.c
  home/delay.c
  home/double_speed.c
  home/fade.c
  home/farcall.c
  home/flag.c
  home/game_time.c
  home/gfx.c
  home/header.c
  home/hm_moves.c
  home/init.c
  home/item.c
  home/joypad.c
  home/lcd.c
  home/map.c
  home/map_objects.c
  home/math.c
  home/menu.c
  home/mobile.c
  home/movement.c
  home/names.c
  home/palettes.c
  home/pokedex_flags.c
  home/pokemon.c
  home/predef.c
  home/print_bcd.c
  home/printer.c
  home/print_text.c
  home/queue_script.c
  home/random.c
  home/region.c
  home/scrolling_menu.c
  home/serial.c
  home/sine.c
  home/sprite_anims.c
  home/sprite_updates.c
  home/sram.c
  home/stone_queue.c
  home/string.c
  home/text.c
  home/tilemap.c
  home/time.c
  home/time_palettes.c
  home/trainers.c
  home/vblank.c
  home/video.c
  home/window.c
  audio/engine.c
  audio/load.c
  data/constant_strings.c
  data/credits_script.c
  data/credits_strings.c
  data/default_options.c
  data/gb_map_pointers.c
  data/gb_tilesets.c
  data/growth_rates.c
  data/icon_pointers.c
  data/json_load.c
  data/mon_menu.c
  data/party_menu_qualities.c
  data/player_names.c
  data/script_pointers.c
  data/tilesets.c
  data/battle/accuracy_multipliers.c
  data/battle/critical_hit_chances.c
  data/battle/effect_command_pointers.c
  data/battle/held_consumables.c
  data/battle/held_heal_status.c
  data/battle/held_stat_up.c
  data/battle/stat_multipliers_2.c
  data/battle/stat_multipliers.c
  data/battle/stat_names.c
  data/battle/weather_modifiers.c
  data/battle/wobble_probabilities.c
  data/battle/ai/constant_damage_effects.c
  data/battle/ai/encore_moves.c
  data/battle/ai/rain_dance_moves.c
  data/battle/ai/reckless_moves.c
  data/battle/ai/residual_moves.c
  data/battle/ai/risky_effects.c
  data/battle/ai/stall_moves.c
  data/battle/ai/status_only_effects.c
  data/battle/ai/sunny_day_moves.c
  data/battle/ai/useful_moves.c
  data/battle_anims/ball_colors.c
  data/battle_anims/framesets.c
  data/battle_anims/oam.c
  data/battle_anims/object_gfx.c
  data/battle_anims/objects.c
  data/battle_tower/classes.c
  data/battle_tower/parties.c
  data/battle_tower/trainer_text.c
  data/battle_tower/unknown_levels.c
  data/collision/collision_permissions.c
  data/collision/collision_stdscripts.c
  data/collision/field_move_blocks.c
  data/decorations/attributes.c
  data/decorations/decorations.c
  data/decorations/mystery_gift_decos.c
  data/decorations/names.c
  data/events/bug_contest_flags.c
  data/events/bug_contest_winners.c
  data/events/elevator_floors.c
  data/events/engine_flags.c
  data/events/happiness_changes.c
  data/events/happiness_probabilities.c
  data/events/magikarp_lengths.c
  data/events/npc_trades.c
  data/events/odd_eggs.c
  data/events/special_pointers.c
  data/events/unown_walls.c
  data/items/apricorn_balls.c
  data/items/attributes.c
  data/items/bargain_shop.c
  data/items/buena_prizes.c
  data/items/catch_rate_items.c
  data/items/descriptions.c
  data/items/fruit_trees.c
  data/items/heal_hp.c
  data/items/heal_status.c
  data/items/mail_items.c
  data/items/marts.c
  data/items/mystery_gift_items.c
  data/items/names.c
  data/items/pocket_names.c
  data/items/rooftop_sale.c
  data/items/x_stats.c
  data/maps/attributes.c
  data/maps/blocks.c
  data/maps/environment_colors.c
  data/maps/flypoints.c
  data/maps/landmarks.c
  data/maps/maps.c
  data/maps/outdoor_sprites.c
  data/maps/roofs.c
  data/maps/scenes.c
  data/maps/setup_script_pointers.c
  data/maps/setup_scripts.c
  data/maps/spawn_points.c
  data/mobile/charmaps.c
  data/mobile/postcode_formats.c
  data/mobile/postcode_to_country_pairs.c
  data/mobile/prefecture_to_postcode_pairs.c
  data/moves/animations.c
  data/moves/critical_hit_moves.c
  data/moves/descriptions.c
  data/moves/effects.c
  data/moves/effects_priorities.c
  data/moves/flail_reversal_power.c
  data/moves/magnitude_power.c
  data/moves/metronome_exception_moves.c
  data/moves/moves.c
  data/moves/names.c
  data/moves/present_power.c
  data/moves/tmhm_moves.c
  data/phone/non_trainer_names.c
  data/phone/permanent_numbers.c
  data/phone/phone_contacts.c
  data/phone/special_calls.c
  data/phone/text/bike_shop.c
  data/phone/text/bill.c
  data/phone/text/buena.c
  data/phone/text/callee.c
  data/phone/text/caller.c
  data/phone/text/elm.c
  data/phone/text/mom.c
  data/phone/text/overworld.c
  data/phone/text/unused.c
  data/pokemon/base_stats.c
  data/pokemon/cries.c
  data/pokemon/dex_entries.c
  data/pokemon/dex_order_alpha.c
  data/pokemon/dex_order_new.c
  data/pokemon/egg_moves.c
  data/pokemon/evos_attacks_pointers.c
  data/pokemon/ezchat_order.c
  data/pokemon/menu_icons.c
  data/pokemon/names.c
  data/pokemon/palettes.c
  data/pokemon/pic_pointers.c
  data/pokemon/unown_pic_pointers.c
  data/radio/buenas_passwords.c
  data/radio/channel_music.c
  data/radio/oaks_pkmn_talk_routes.c
  data/radio/pnp_hidden_people.c
  data/radio/pnp_places.c
  data/sprite_anims/framesets.c
  data/sprite_anims/oam.c
  data/sprite_anims/sequences.c
  data/sprites/emotes.c
  data/sprites/facings.c
  data/sprites/map_objects.c
  data/sprites/player_sprites.c
  data/sprites/sprite_mons.c
  data/sprites/sprites.c
  data/text/battle.c
  data/text/common_1.c
  data/text/common_2.c
  data/text/common_3.c
  data/text/mail_input_chars.c
  data/text/name_input_chars.c
  data/text/std_text.c
  data/trainers/attributes.c
  data/trainers/class_names.c
  data/trainers/dvs.c
  data/trainers/encounter_music.c
  data/trainers/gendered_trainers.c
  data/trainers/genders.c
  data/trainers/leaders.c
  data/trainers/palettes.c
  data/trainers/parties.c
  data/trainers/pic_pointers.c
  data/trainers/sprites.c
  data/types/badge_type_boosts.c
  data/types/names.c
  data/types/search_strings.c
  data/types/search_types.c
  data/types/type_boost_items.c
  data/types/type_matchups.c
  data/wild/bug_contest_mons.c
  data/wild/fish.c
  data/wild/flee_mons.c
  data/wild/johto_grass.c
  data/wild/johto_water.c
  data/wild/kanto_grass.c
  data/wild/kanto_water.c
  data/wild/probabilities.c
  data/wild/roammon_maps.c
  data/wild/swarm_grass.c
  data/wild/treemon_maps.c
  data/wild/treemons_asleep.c
  data/wild/treemons.c
  data/wild/unlocked_unowns.c
  engine/battle/anim_hp_bar.c
  engine/battle/battle_transition.c
  engine/battle/check_battle_scene.c
  engine/battle/consume_held_item.c
  engine/battle/core.c
  engine/battle/effect_commands.c
  engine/battle/hidden_power.c
  engine/battle/link_result.c
  engine/battle/menu.c
  engine/battle/misc.c
  engine/battle/read_trainer_attributes.c
  engine/battle/read_trainer_dvs.c
  engine/battle/read_trainer_party.c
  engine/battle/returntobattle_useball.c
  engine/battle/sliding_intro.c
  engine/battle/start_battle.c
  engine/battle/trainer_huds.c
  engine/battle/update_battle_huds.c
  engine/battle/used_move_text.c
  engine/battle/ai/items.c
  engine/battle/ai/move.c
  engine/battle/ai/redundant.c
  engine/battle/ai/scoring.c
  engine/battle/ai/switch.c
  engine/battle_anims/anim_commands.c
  engine/battle_anims/bg_effects.c
  engine/battle_anims/core.c
  engine/battle_anims/functions.c
  engine/battle_anims/helpers.c
  engine/battle_anims/pokeball_wobble.c
  engine/debug/color_picker.c
  engine/events/basement_key.c
  engine/events/buena.c
  engine/events/buena_menu.c
  engine/events/card_key.c
  engine/events/catch_tutorial.c
  engine/events/catch_tutorial_input.c
  engine/events/celebi.c
  engine/events/checkforhiddenitems.c
  engine/events/checksave.c
  engine/events/checktime.c
  engine/events/daycare.c
  engine/events/diploma.c
  engine/events/dratini.c
  engine/events/elevator.c
  engine/events/engine_flags.c
  engine/events/field_moves.c
  engine/events/fish.c
  engine/events/fishing_gfx.c
  engine/events/forced_movement.c
  engine/events/fruit_trees.c
  engine/events/haircut.c
  engine/events/halloffame.c
  engine/events/happiness_egg.c
  engine/events/heal_machine_anim.c
  engine/events/hidden_item.c
  engine/events/itemfinder.c
  engine/events/kurt.c
  engine/events/kurt_selectquantity_interpretjoypad.c
  engine/events/lucky_number.c
  engine/events/magikarp.c
  engine/events/magnet_train.c
  engine/events/map_name_sign.c
  engine/events/misc_scripts.c
  engine/events/mom.c
  engine/events/mom_phone.c
  engine/events/money.c
  engine/events/move_deleter.c
  engine/events/move_tutor.c
  engine/events/name_rater.c
  engine/events/npc_trade.c
  engine/events/odd_egg.c
  engine/events/overworld.c
  engine/events/play_slow_cry.c
  engine/events/poisonstep.c
  engine/events/poisonstep_pals.c
  engine/events/pokecenter_pc.c
  engine/events/pokepic.c
  engine/events/poke_seer.c
  engine/events/print_photo.c
  engine/events/print_unown_2.c
  engine/events/print_unown.c
  engine/events/prof_oaks_pc.c
  engine/events/repel.c
  engine/events/sacred_ash.c
  engine/events/shuckle.c
  engine/events/specials.c
  engine/events/squirtbottle.c
  engine/events/std_collision.c
  engine/events/std_scripts.c
  engine/events/sweet_scent.c
  engine/events/trainer_scripts.c
  engine/events/treemons.c
  engine/events/unown_walls.c
  engine/events/whiteout.c
  engine/events/battle_tower/battle_tower.c
  engine/events/battle_tower/get_trainer_class.c
  engine/events/battle_tower/load_trainer.c
  engine/events/battle_tower/rules.c
  engine/events/battle_tower/trainer_text.c
  engine/events/bug_contest/caught_mon.c
  engine/events/bug_contest/contest_2.c
  engine/events/bug_contest/contest.c
  engine/events/bug_contest/display_stats.c
  engine/events/bug_contest/judging.c
  engine/events/pokerus/apply_pokerus_tick.c
  engine/events/pokerus/check_pokerus.c
  engine/events/pokerus/pokerus.c
  engine/games/card_flip.c
  engine/games/slot_machine.c
  engine/games/unown_puzzle.c
  engine/gfx/cgb_layouts.c
  engine/gfx/color.c
  engine/gfx/crystal_layouts.c
  engine/gfx/dma_transfer.c
  engine/gfx/load_font.c
  engine/gfx/load_overworld_font.c
  engine/gfx/load_pics.c
  engine/gfx/mon_icons.c
  engine/gfx/pic_animation.c
  engine/gfx/place_graphic.c
  engine/gfx/player_gfx.c
  engine/gfx/sprite_anims.c
  engine/gfx/sprites.c
  engine/gfx/trademon_frontpic.c
  engine/items/buy_sell_toss.c
  engine/items/item_effects.c
  engine/items/items.c
  engine/items/mart.c
  engine/items/pack.c
  engine/items/pack_kris.c
  engine/items/print_item_description.c
  engine/items/switch_items.c
  engine/items/tmhm2.c
  engine/items/tmhm.c
  engine/items/update_item_description.c
  engine/link/lan.c
  engine/link/link_2.c
  engine/link/link.c
  engine/link/link_trade.c
  engine/link/mystery_gift_2.c
  engine/link/mystery_gift.c
  engine/link/place_waiting_text.c
  engine/link/time_capsule.c
  engine/math/get_square_root.c
  engine/math/math.c
  engine/math/print_num.c
  engine/math/sine.c
  engine/menus/debug_field_menu.c
  engine/menus/debugmenu.c
  engine/menus/delete_save.c
  engine/menus/empty_sram.c
  engine/menus/init_gender.c
  engine/menus/intro_menu.c
  engine/menus/main_menu.c
  engine/menus/menu_2.c
  engine/menus/menu.c
  engine/menus/naming_screen.c
  engine/menus/options_menu.c
  engine/menus/save.c
  engine/menus/savemenu_copytilemapatonce.c
  engine/menus/scrolling_menu.c
  engine/menus/start_menu.c
  engine/menus/trainer_card.c
  engine/movie/credits.c
  engine/movie/evolution_animation.c
  engine/movie/gbc_only.c
  engine/movie/init_hof_credits.c
  engine/movie/intro.c
  engine/movie/splash.c
  engine/movie/title.c
  engine/movie/trade_animation.c
  engine/overworld/cmd_queue.c
  engine/overworld/decorations.c
  engine/overworld/events.c
  engine/overworld/init_map.c
  engine/overworld/landmarks.c
  engine/overworld/load_map_part.c
  engine/overworld/map_objects_2.c
  engine/overworld/map_objects.c
  engine/overworld/map_setup.c
  engine/overworld/movement.c
  engine/overworld/npc_movement.c
  engine/overworld/overworld.c
  engine/overworld/player_movement.c
  engine/overworld/player_object.c
  engine/overworld/player_step.c
  engine/overworld/scripting.c
  engine/overworld/select_menu.c
  engine/overworld/spawn_points.c
  engine/overworld/tile_events.c
  engine/overworld/time.c
  engine/overworld/variables.c
  engine/overworld/warp_connection.c
  engine/overworld/wildmons.c
  engine/phone/phone.c
  engine/phone/phonering_copytilemapatonce.c
  engine/phone/scripts/alan.c
  engine/phone/scripts/anthony.c
  engine/phone/scripts/arnie.c
  engine/phone/scripts/beth.c
  engine/phone/scripts/beverly.c
  engine/phone/scripts/bike_shop.c
  engine/phone/scripts/bill.c
  engine/phone/scripts/brent.c
  engine/phone/scripts/brent_gossip.c
  engine/phone/scripts/buena.c
  engine/phone/scripts/chad.c
  engine/phone/scripts/chad_gossip.c
  engine/phone/scripts/dana.c
  engine/phone/scripts/derek.c
  engine/phone/scripts/elm.c
  engine/phone/scripts/erin.c
  engine/phone/scripts/gaven.c
  engine/phone/scripts/generic_callee.c
  engine/phone/scripts/generic_caller.c
  engine/phone/scripts/gina.c
  engine/phone/scripts/hangups_2.c
  engine/phone/scripts/hangups.c
  engine/phone/scripts/huey.c
  engine/phone/scripts/irwin.c
  engine/phone/scripts/irwin_gossip.c
  engine/phone/scripts/jack.c
  engine/phone/scripts/jack_gossip.c
  engine/phone/scripts/joey.c
  engine/phone/scripts/jose.c
  engine/phone/scripts/kenji.c
  engine/phone/scripts/liz.c
  engine/phone/scripts/liz_gossip.c
  engine/phone/scripts/mom.c
  engine/phone/scripts/parry.c
  engine/phone/scripts/ralph.c
  engine/phone/scripts/reena.c
  engine/phone/scripts/reminders_2.c
  engine/phone/scripts/reminders.c
  engine/phone/scripts/tiffany.c
  engine/phone/scripts/todd.c
  engine/phone/scripts/tully.c
  engine/phone/scripts/unused.c
  engine/phone/scripts/vance.c
  engine/phone/scripts/wade.c
  engine/phone/scripts/wilton.c
  engine/pokedex/new_pokedex_entry.c
  engine/pokedex/pokedex_2.c
  engine/pokedex/pokedex_3.c
  engine/pokedex/pokedex.c
  engine/pokedex/unown_dex.c
  engine/pokegear/pokegear.c
  engine/pokegear/radio.c
  engine/pokegear/townmap_convertlinebreakcharacters.c
  engine/pokemon/bills_pc.c
  engine/pokemon/bills_pc_top.c
  engine/pokemon/breeding.c
  engine/pokemon/breedmon_level_growth.c
  engine/pokemon/caught_data.c
  engine/pokemon/correct_nick_errors.c
  engine/pokemon/european_mail.c
  engine/pokemon/evolve.c
  engine/pokemon/experience.c
  engine/pokemon/health.c
  engine/pokemon/knows_move.c
  engine/pokemon/learn.c
  engine/pokemon/level_up_happiness.c
  engine/pokemon/mail_2.c
  engine/pokemon/mail.c
  engine/pokemon/mon_menu.c
  engine/pokemon/mon_stats.c
  engine/pokemon/mon_submenu.c
  engine/pokemon/move_mon.c
  engine/pokemon/move_mon_wo_mail.c
  engine/pokemon/party_menu.c
  engine/pokemon/print_move_description.c
  engine/pokemon/search2.c
  engine/pokemon/search.c
  engine/pokemon/stats_screen.c
  engine/pokemon/switchpartymons.c
  engine/pokemon/tempmon.c
  engine/pokemon/types.c
  engine/printer/printer.c
  engine/printer/print_party.c
  engine/rtc/print_hours_mins.c
  engine/rtc/reset_password.c
  engine/rtc/restart_clock.c
  engine/rtc/rtc.c
  engine/rtc/timeset.c
  engine/tilesets/mapgroup_roofs.c
  engine/tilesets/map_palettes.c
  engine/tilesets/tileset_anims.c
  engine/tilesets/tileset_palettes.c
  engine/tilesets/timeofday_pals.c
  engine/smallflag.c
  gfx/battle_anims.c
  gfx/emotes.c
  gfx/font.c
  gfx/footprints.c
  gfx/icons.c
  gfx/mail.c
  gfx/misc.c
  gfx/pics.c
  gfx/sprites.c
  gfx/tileset_palette_maps.c
  gfx/tilesets.c
  gfx/pokemon/anims.c
  gfx/pokemon/idles.c
  gfx/pokemon/unown_anims.c
  gfx/pokemon/unown_idles.c
  gfx/sgb/pal_packets.c
  lib/mobile/main.c
  maps/AzaleaGym.c
  maps/AzaleaMart.c
  maps/AzaleaPokecenter1F.c
  maps/AzaleaTown.c
  maps/BattleTower1F.c
  maps/BattleTowerBattleRoom.c
  maps/BattleTowerElevator.c
  maps/BattleTowerHallway.c
  maps/BattleTowerOutside.c
  maps/BillsBrothersHouse.c
  maps/BillsFamilysHouse.c
  maps/BillsHouse.c
  maps/BlackthornCity.c
  maps/BlackthornDragonSpeechHouse.c
  maps/BlackthornEmysHouse.c
  maps/BlackthornGym1F.c
  maps/BlackthornGym2F.c
  maps/BlackthornMart.c
  maps/BlackthornPokecenter1F.c
  maps/BluesHouse.c
  maps/BrunosRoom.c
  maps/BurnedTower1F.c
  maps/BurnedTowerB1F.c
  maps/CeladonCafe.c
  maps/CeladonCity.c
  maps/CeladonDeptStore1F.c
  maps/CeladonDeptStore2F.c
  maps/CeladonDeptStore3F.c
  maps/CeladonDeptStore4F.c
  maps/CeladonDeptStore5F.c
  maps/CeladonDeptStore6F.c
  maps/CeladonDeptStoreElevator.c
  maps/CeladonGameCorner.c
  maps/CeladonGameCornerPrizeRoom.c
  maps/CeladonGym.c
  maps/CeladonMansion1F.c
  maps/CeladonMansion2F.c
  maps/CeladonMansion3F.c
  maps/CeladonMansionRoof.c
  maps/CeladonMansionRoofHouse.c
  maps/CeladonPokecenter1F.c
  maps/CeruleanCity.c
  maps/CeruleanGymBadgeSpeechHouse.c
  maps/CeruleanGym.c
  maps/CeruleanMart.c
  maps/CeruleanPokecenter1F.c
  maps/CeruleanPoliceStation.c
  maps/CeruleanTradeSpeechHouse.c
  maps/CharcoalKiln.c
  maps/CherrygroveCity.c
  maps/CherrygroveEvolutionSpeechHouse.c
  maps/CherrygroveGymSpeechHouse.c
  maps/CherrygroveMart.c
  maps/CherrygrovePokecenter1F.c
  maps/CianwoodCity.c
  maps/CianwoodGym.c
  maps/CianwoodLugiaSpeechHouse.c
  maps/CianwoodPharmacy.c
  maps/CianwoodPhotoStudio.c
  maps/CianwoodPokecenter1F.c
  maps/CinnabarIsland.c
  maps/CinnabarPokecenter1F.c
  maps/Colosseum.c
  maps/CopycatsHouse1F.c
  maps/CopycatsHouse2F.c
  maps/DanceTheatre.c
  maps/DarkCaveBlackthornEntrance.c
  maps/DarkCaveVioletEntrance.c
  maps/DayCare.c
  maps/DayOfWeekSiblingsHouse.c
  maps/DiglettsCave.c
  maps/DragonsDen1F.c
  maps/DragonsDenB1F.c
  maps/DragonShrine.c
  maps/EarlsPokemonAcademy.c
  maps/EcruteakCity.c
  maps/EcruteakGym.c
  maps/EcruteakItemfinderHouse.c
  maps/EcruteakLugiaSpeechHouse.c
  maps/EcruteakMart.c
  maps/EcruteakPokecenter1F.c
  maps/EcruteakTinTowerEntrance.c
  maps/ElmsHouse.c
  maps/ElmsLab.c
  maps/FastShip1F.c
  maps/FastShipB1F.c
  maps/FastShipCabins_NNW_NNE_NE.c
  maps/FastShipCabins_SE_SSE_CaptainsCabin.c
  maps/FastShipCabins_SW_SSW_NW.c
  maps/FightingDojo.c
  maps/FuchsiaCity.c
  maps/FuchsiaGym.c
  maps/FuchsiaMart.c
  maps/FuchsiaPokecenter1F.c
  maps/GoldenrodBikeShop.c
  maps/GoldenrodCity.c
  maps/GoldenrodDeptStore1F.c
  maps/GoldenrodDeptStore2F.c
  maps/GoldenrodDeptStore3F.c
  maps/GoldenrodDeptStore4F.c
  maps/GoldenrodDeptStore5F.c
  maps/GoldenrodDeptStore6F.c
  maps/GoldenrodDeptStoreB1F.c
  maps/GoldenrodDeptStoreElevator.c
  maps/GoldenrodDeptStoreRoof.c
  maps/GoldenrodFlowerShop.c
  maps/GoldenrodGameCorner.c
  maps/GoldenrodGym.c
  maps/GoldenrodHappinessRater.c
  maps/GoldenrodMagnetTrainStation.c
  maps/GoldenrodNameRater.c
  maps/GoldenrodPPSpeechHouse.c
  maps/GoldenrodUnderground.c
  maps/GoldenrodUndergroundSwitchRoomEntrances.c
  maps/GoldenrodUndergroundWarehouse.c
  maps/GuideGentsHouse.c
  maps/HallOfFame.c
  maps/IcePath1F.c
  maps/IcePathB1F.c
  maps/IcePathB2FBlackthornSide.c
  maps/IcePathB2FMahoganySide.c
  maps/IcePathB3F.c
  maps/IlexForestAzaleaGate.c
  maps/IlexForest.c
  maps/IndigoPlateauPokecenter1F.c
  maps/KarensRoom.c
  maps/KogasRoom.c
  maps/KurtsHouse.c
  maps/LakeOfRage.c
  maps/LakeOfRageHiddenPowerHouse.c
  maps/LakeOfRageMagikarpHouse.c
  maps/LancesRoom.c
  maps/LavenderMart.c
  maps/LavenderNameRater.c
  maps/LavenderPokecenter1F.c
  maps/LavenderSpeechHouse.c
  maps/LavenderTown.c
  maps/LavRadioTower1F.c
  maps/MahoganyGym.c
  maps/MahoganyMart1F.c
  maps/MahoganyPokecenter1F.c
  maps/MahoganyRedGyaradosSpeechHouse.c
  maps/MahoganyTown.c
  maps/ManiasHouse.c
  maps/MobileBattleRoom.c
  maps/MobileTradeRoom.c
  maps/MountMoon.c
  maps/MountMoonGiftShop.c
  maps/MountMoonSquare.c
  maps/MountMortar1FInside.c
  maps/MountMortar1FOutside.c
  maps/MountMortar2FInside.c
  maps/MountMortarB1F.c
  maps/MoveDeletersHouse.c
  maps/MrFujisHouse.c
  maps/MrPokemonsHouse.c
  maps/MrPsychicsHouse.c
  maps/NationalParkBugContest.c
  maps/NationalPark.c
  maps/NewBarkTown.c
  maps/OaksLab.c
  maps/OlivineCafe.c
  maps/OlivineCity.c
  maps/OlivineGoodRodHouse.c
  maps/OlivineGym.c
  maps/OlivineLighthouse1F.c
  maps/OlivineLighthouse2F.c
  maps/OlivineLighthouse3F.c
  maps/OlivineLighthouse4F.c
  maps/OlivineLighthouse5F.c
  maps/OlivineLighthouse6F.c
  maps/OlivineMart.c
  maps/OlivinePokecenter1F.c
  maps/OlivinePort.c
  maps/OlivinePortPassage.c
  maps/OlivinePunishmentSpeechHouse.c
  maps/OlivineTimsHouse.c
  maps/PalletTown.c
  maps/PewterCity.c
  maps/PewterGym.c
  maps/PewterMart.c
  maps/PewterNidoranSpeechHouse.c
  maps/PewterPokecenter1F.c
  maps/PewterSnoozeSpeechHouse.c
  maps/PlayersHouse1F.c
  maps/PlayersHouse2F.c
  maps/PlayersNeighborsHouse.c
  maps/Pokecenter2F.c
  maps/PokecomCenterAdminOfficeMobile.c
  maps/PokecomCenter.c
  maps/PokemonFanClub.c
  maps/PokeSeersHouse.c
  maps/PowerPlant.c
  maps/RadioTower1F.c
  maps/RadioTower2F.c
  maps/RadioTower3F.c
  maps/RadioTower4F.c
  maps/RadioTower5F.c
  maps/RedsHouse1F.c
  maps/RedsHouse2F.c
  maps/RockTunnel1F.c
  maps/RockTunnelB1F.c
  maps/Route10North.c
  maps/Route10Pokecenter1F.c
  maps/Route10South.c
  maps/Route11.c
  maps/Route12.c
  maps/Route12SuperRodHouse.c
  maps/Route13.c
  maps/Route14.c
  maps/Route15.c
  maps/Route15FuchsiaGate.c
  maps/Route16.c
  maps/Route16FuchsiaSpeechHouse.c
  maps/Route16Gate.c
  maps/Route17.c
  maps/Route17Route18Gate.c
  maps/Route18.c
  maps/Route19.c
  maps/Route19FuchsiaGate.c
  maps/Route1.c
  maps/Route20.c
  maps/Route21.c
  maps/Route22.c
  maps/Route23.c
  maps/Route24.c
  maps/Route25.c
  maps/Route26.c
  maps/Route26HealHouse.c
  maps/Route27.c
  maps/Route27SandstormHouse.c
  maps/Route28.c
  maps/Route28SteelWingHouse.c
  maps/Route29.c
  maps/Route29Route46Gate.c
  maps/Route2.c
  maps/Route2Gate.c
  maps/Route2NuggetHouse.c
  maps/Route30BerryHouse.c
  maps/Route30.c
  maps/Route31.c
  maps/Route31VioletGate.c
  maps/Route32.c
  maps/Route32Pokecenter1F.c
  maps/Route32RuinsOfAlphGate.c
  maps/Route33.c
  maps/Route34.c
  maps/Route34IlexForestGate.c
  maps/Route35.c
  maps/Route35GoldenrodGate.c
  maps/Route35NationalParkGate.c
  maps/Route36.c
  maps/Route36NationalParkGate.c
  maps/Route36RuinsOfAlphGate.c
  maps/Route37.c
  maps/Route38.c
  maps/Route38EcruteakGate.c
  maps/Route39Barn.c
  maps/Route39.c
  maps/Route39Farmhouse.c
  maps/Route3.c
  maps/Route40BattleTowerGate.c
  maps/Route40.c
  maps/Route41.c
  maps/Route42.c
  maps/Route42EcruteakGate.c
  maps/Route43.c
  maps/Route43Gate.c
  maps/Route43MahoganyGate.c
  maps/Route44.c
  maps/Route45.c
  maps/Route46.c
  maps/Route4.c
  maps/Route5.c
  maps/Route5CleanseTagHouse.c
  maps/Route5SaffronGate.c
  maps/Route5UndergroundPathEntrance.c
  maps/Route6.c
  maps/Route6SaffronGate.c
  maps/Route6UndergroundPathEntrance.c
  maps/Route7.c
  maps/Route7SaffronGate.c
  maps/Route8.c
  maps/Route8SaffronGate.c
  maps/Route9.c
  maps/RuinsOfAlphAerodactylChamber.c
  maps/RuinsOfAlphAerodactylItemRoom.c
  maps/RuinsOfAlphAerodactylWordRoom.c
  maps/RuinsOfAlphHoOhChamber.c
  maps/RuinsOfAlphHoOhItemRoom.c
  maps/RuinsOfAlphHoOhWordRoom.c
  maps/RuinsOfAlphInnerChamber.c
  maps/RuinsOfAlphKabutoChamber.c
  maps/RuinsOfAlphKabutoItemRoom.c
  maps/RuinsOfAlphKabutoWordRoom.c
  maps/RuinsOfAlphOmanyteChamber.c
  maps/RuinsOfAlphOmanyteItemRoom.c
  maps/RuinsOfAlphOmanyteWordRoom.c
  maps/RuinsOfAlphOutside.c
  maps/RuinsOfAlphResearchCenter.c
  maps/SafariZoneMainOffice.c
  maps/SafariZoneWardensHome.c
  maps/SaffronCity.c
  maps/SaffronGym.c
  maps/SaffronMagnetTrainStation.c
  maps/SaffronMart.c
  maps/SaffronPokecenter1F.c
  maps/SeafoamGym.c
  maps/SilphCo1F.c
  maps/SilverCaveItemRooms.c
  maps/SilverCaveOutside.c
  maps/SilverCavePokecenter1F.c
  maps/SilverCaveRoom1.c
  maps/SilverCaveRoom2.c
  maps/SilverCaveRoom3.c
  maps/SlowpokeWellB1F.c
  maps/SlowpokeWellB2F.c
  maps/SoulHouse.c
  maps/SproutTower1F.c
  maps/SproutTower2F.c
  maps/SproutTower3F.c
  maps/TeamRocketBaseB1F.c
  maps/TeamRocketBaseB2F.c
  maps/TeamRocketBaseB3F.c
  maps/TinTower1F.c
  maps/TinTower2F.c
  maps/TinTower3F.c
  maps/TinTower4F.c
  maps/TinTower5F.c
  maps/TinTower6F.c
  maps/TinTower7F.c
  maps/TinTower8F.c
  maps/TinTower9F.c
  maps/TinTowerRoof.c
  maps/TohjoFalls.c
  maps/TradeCenter.c
  maps/TrainerHouse1F.c
  maps/TrainerHouseB1F.c
  maps/UndergroundPath.c
  maps/UnionCave1F.c
  maps/UnionCaveB1F.c
  maps/UnionCaveB2F.c
  maps/VermilionCity.c
  maps/VermilionDiglettsCaveSpeechHouse.c
  maps/VermilionFishingSpeechHouse.c
  maps/VermilionGym.c
  maps/VermilionMagnetTrainSpeechHouse.c
  maps/VermilionMart.c
  maps/VermilionPokecenter1F.c
  maps/VermilionPort.c
  maps/VermilionPortPassage.c
  maps/VictoryRoad.c
  maps/VictoryRoadGate.c
  maps/VioletCity.c
  maps/VioletGym.c
  maps/VioletKylesHouse.c
  maps/VioletMart.c
  maps/VioletNicknameSpeechHouse.c
  maps/VioletPokecenter1F.c
  maps/ViridianCity.c
  maps/ViridianGym.c
  maps/ViridianMart.c
  maps/ViridianNicknameSpeechHouse.c
  maps/ViridianPokecenter1F.c
  maps/WhirlIslandB1F.c
  maps/WhirlIslandB2F.c
  maps/WhirlIslandCave.c
  maps/WhirlIslandLugiaChamber.c
  maps/WhirlIslandNE.c
  maps/WhirlIslandNW.c
  maps/WhirlIslandSE.c
  maps/WhirlIslandSW.c
  maps/WillsRoom.c
  maps/WiseTriosRoom.c
  mobile/fixed_words.c
  mobile/mobile_12_2.c
  mobile/mobile_12.c
  mobile/mobile_22_2.c
  mobile/mobile_22.c
  mobile/mobile_40.c
  mobile/mobile_41.c
  mobile/mobile_42.c
  mobile/mobile_45_2.c
  mobile/mobile_45_sprite_engine.c
  mobile/mobile_45_stadium.c
  mobile/mobile_46.c
  mobile/mobile_5b.c
  mobile/mobile_5c.c
  mobile/mobile_5e.c
  mobile/mobile_5f.c
  mobile/mobile_menu.c
  mobile/print_opp_message.c
  util/assets.c
  util/debug.c
  util/gb_ptr.c
  util/hrc.c
  util/input.c
  util/intro_jumptable.c
  util/log.c
  util/misc.c
  util/network.c
  util/printer.c
  util/record.c
  util/rtc.c
  util/scripting.c
  util/serialize.c
  util/socket.c
  util/soft_reset.c
  util/stb_image.c
  util/text_cmd.c
  util/util_string.c
  functions.c
  hram.c
  vram.c
  wram.c
)

if(FEATURE_MOBILE)
  add_library(libmobile
    lib/libmobile/callback.c
    lib/libmobile/commands.c
    lib/libmobile/config.c
    lib/libmobile/debug.c
    lib/libmobile/dns.c
    lib/libmobile/inet_pton.c
    lib/libmobile/mobile.c
    lib/libmobile/relay.c
    lib/libmobile/serial.c
    lib/libmobile/util.c
  )
endif()

target_link_libraries(${PROJECT_NAME} PRIVATE m)
if(FEATURE_MOBILE)
  target_link_libraries(${PROJECT_NAME} PRIVATE libmobile)
endif()

include(FindPkgConfig)

pkg_search_module(SDL2 REQUIRED sdl2)
target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_INCLUDE_DIRS})
if(STATIC)
  target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_STATIC_LIBRARIES})
else()
  target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_LIBRARIES})
endif()

if(USE_SDLNET)
  pkg_search_module(SDL2_NET REQUIRED SDL2_net)
  target_include_directories(${PROJECT_NAME} PRIVATE ${SDL2_NET_INCLUDE_DIRS})
  if(STATIC)
    target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_NET_STATIC_LIBRARIES})
  else()
    target_link_libraries(${PROJECT_NAME} PRIVATE ${SDL2_NET_LIBRARIES})
  endif()
endif(USE_SDLNET)

if(USE_PHYSFS)
  pkg_search_module(PHYSFS REQUIRED physfs)
  target_include_directories(${PROJECT_NAME} PRIVATE ${PHYSFS_INCLUDE_DIRS})
  if(STATIC)
    target_link_libraries(${PROJECT_NAME} PRIVATE ${PHYSFS_STATIC_LIBRARIES})
  else()
    target_link_libraries(${PROJECT_NAME} PRIVATE ${PHYSFS_LIBRARIES})
  endif()
endif(USE_PHYSFS)